[package]
name = "arst-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.82" }
tokio = { version = "1.20.1", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
base64 = "0.13.0"
http = "0.2.8"